[gd_scene format=3 uid="uid://c6deeahhdrv3l"]

[ext_resource type="Script" uid="uid://cvhb216wxbchw" path="res://Scenes/Hud/hud.gd" id="1_r346g"]
[ext_resource type="FontFile" uid="uid://n8ga6gjs7d5c" path="res://assests/fonts/NovaMono.ttf" id="2_88iar"]
[ext_resource type="Texture2D" uid="uid://deovifi82xb8c" path="res://assests/pickups/pixelHeart.png" id="3_r346g"]
[ext_resource type="AudioStream" uid="uid://db3t4jx5vcorm" path="res://assests/sound/BGMusic.wav" id="4_m635s"]

[sub_resource type="LabelSettings" id="LabelSettings_r346g"]
font = ExtResource("2_88iar")
font_color = Color(0.40853152, 0.75691056, 0.67413855, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n088g"]
font = ExtResource("2_88iar")
font_size = 70
font_color = Color(0, 0.54250014, 0.93, 1)
outline_size = 3
outline_color = Color(0.43699992, 0, 0.69, 1)

[sub_resource type="LabelSettings" id="LabelSettings_88iar"]
font = ExtResource("2_88iar")
font_color = Color(1, 0.45, 0.45, 1)

[node name="Hud" type="Control" unique_id=168102333]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_r346g")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=2055005747]
stream = ExtResource("4_m635s")
volume_db = -31.859
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1721255886]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
scale = Vector2(1, 0.8)
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12

[node name="ScoreLabel" type="Label" parent="MarginContainer" unique_id=1293565072]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.4392157, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_88iar")
theme_override_font_sizes/font_size = 24
text = "ScoreLabel"
label_settings = SubResource("LabelSettings_r346g")

[node name="HBHearts" type="HBoxContainer" parent="MarginContainer" unique_id=1424138035]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBHearts" unique_id=1223178001]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r346g")
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBHearts" unique_id=602175129]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r346g")
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBHearts" unique_id=1922698279]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r346g")
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBHearts" unique_id=76469881]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r346g")
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/HBHearts" unique_id=1131907462]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r346g")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="." unique_id=1328117695]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0033333302, 0.1, 0.5803922)

[node name="VBGameOver" type="VBoxContainer" parent="ColorRect" unique_id=1204389835]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -125.0
offset_right = 241.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBGameOver" unique_id=1854723246]
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER"
label_settings = SubResource("LabelSettings_n088g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/VBGameOver" unique_id=49388973]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Press Space to play again!"
label_settings = SubResource("LabelSettings_88iar")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBComplete" type="VBoxContainer" parent="ColorRect" unique_id=2119408472]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -125.0
offset_right = 241.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBComplete" unique_id=1959288012]
layout_mode = 2
size_flags_horizontal = 4
text = "Level Complete"
label_settings = SubResource("LabelSettings_n088g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CompleteTimer" type="Timer" parent="." unique_id=1329554880]
wait_time = 2.0
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="." unique_id=910136036]
stream = ExtResource("4_m635s")
volume_db = -30.0
pitch_scale = 1.78

[connection signal="timeout" from="CompleteTimer" to="." method="_on_complete_timer_timeout"]
[connection signal="finished" from="Sound" to="." method="_on_sound_finished"]
